--- a/webFluxBase/sse/pom.xml
+++ b/webFluxBase/sse/pom.xml
@@ -11,13 +11,12 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-
-    <groupId>com.example</groupId>
-    <artifactId>webFluxBase</artifactId>
+    <groupId>com.lqs.sse</groupId>
+    <artifactId>sse</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    <name>webFluxBase</name>
-    <description>webFluxBase</description>
+    <name>sse</name>
+    <description>sse</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -26,13 +25,12 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
@@ -40,13 +38,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -54,14 +45,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
             </plugin>
         </plugins>
     </build>
